--- a/_quarto.yml
+++ b/_quarto.yml
@@ -73,13 +73,11 @@ website:
           - href: project-tips-resources.qmd
             text: Tips + resources
 
-
 format:
   html:
     toc: true
     theme:
       light: [cosmo, style/theme.scss]
-      dark: [cosmo, style/theme.scss, style/dark.scss]
-    mainfont: "Atkinson Hyperlegible"
     code-copy: true
     code-overflow: wrap
+    css: style/styles.css
